log/build_2022-08-19_14-30-00/flody_test_suite/stderr.log
  File "/home/daeho/practice_ws/install/flody_test_suite/lib/python3.10/site-packages/flody_test_suite/flody_test_suite_node.py", line 96
    pose.theta. 3.14 될때까지 
                ^^^^
SyntaxError: invalid syntax

